Fix video cut off at weird aspect ratios

--- a/_sass/includes/_embed_video.scss
+++ b/_sass/includes/_embed_video.scss
@@ -16,3 +16,25 @@
   height: 100%;
   padding: 0;
 }
+
+.video-container-i {
+  position: relative;
+  padding-bottom: 100%;
+  // 100 percent seems to fix weird aspect ratio
+  // videos cutoff on mobile when zoomed in
+  // but causes YouTube embed to overfill
+  padding-top: 0px;
+  height: 0;
+  overflow: hidden;
+  margin-bottom: 1.5em;
+}
+.video-container-i iframe, 
+.video-container-i object, 
+.video-container-i embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
